--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - DJANGO=1.11.23
 
 before_install:
-  - export DJANGO_SETTINGS_MODULE=config.settings.production
+  - export DJANGO_SETTINGS_MODULE=config.settings.travis
   - export PYTHONPATH=$HOME/builds/beijbom/coralnet/project
   - export PIP_USE_MIRRORS=true
 
@@ -28,7 +28,8 @@ install:
   - pip install psycopg2 --quiet
 
 before_script:
-  - psql -c "CREATE DATABASE mydb;" -U postgres
+  - psql -c "CREATE DATABASE travis_ci_test;" -U postgres
+  - cd project
 
 script:
   - python manage.py syncdb --noinput
