--- a/.env.dist
+++ b/.env.dist
@@ -120,10 +120,9 @@ SECRET_KEY=
 # make it 'dev_' followed by your name.
 #SPACER_JOB_HASH=your_hash_here
 
-# Recommended when running unit tests or when just trying out classifiers in
-# dev environments. This lowers the image count requirement for training, thus
-# greatly speeding up any tests involving setting up training data.
-#TRAINING_MIN_IMAGES=2
+# Recommended when trying out classifiers in dev environments.
+# Can't set this lower than 3 though.
+#TRAINING_MIN_IMAGES=3
 
 # Recommended when trying out the front page map. Again, the regular image
 # count requirements to get markers to appear on the map (or appear with higher
