Add WIP dark color scheme.
It's only present by specifying DARK_COLORS_AVAILABLE=True in .env. When present, it follows your browser's color preference, and can also be toggled on/off with a button in the upper right corner (but this toggle doesn't save for subsequent next page loads).

Convert many hex codes to HSL, and refactor CSS color rules to be scheme-friendly and a bit more DRY. Accordingly, some colors in the light/default theme have been changed slightly.

<select> fields don't seem to display well with a customized hover background color, so they now use a hover border color instead.

Links now have a hover color.

Remove -moz/-webkit-border-radius, -moz/-webkit-box-shadow, img/bg-container.png, and the `a.button` styling since they didn't seem to be doing anything for us anymore.

--- a/.env.dist
+++ b/.env.dist
@@ -136,6 +136,9 @@ SECRET_KEY=
 #CAROUSEL_IMAGE_COUNT=2
 #CAROUSEL_IMAGE_POOL=123,124,125
 
+# Dark color scheme.
+#DARK_COLORS_AVAILABLE=True
+
 # If you're running the Selenium tests, you'll have to specify the browsers
 # on your system which Selenium can run on. Tests will run faster on headless
 # browsers.
