.env.dist: Clarification on LOG_DATABASE_QUERIES.

--- a/.env.dist
+++ b/.env.dist
@@ -106,8 +106,9 @@ SECRET_KEY=
 #MEDIA_URL=http://localhost:8070/
 #STATIC_URL=http://127.0.0.1:8080/
 
-# This should log database queries to a file in your LOG_DIR. Useful when
-# debugging database-querying code.
+# This should log database queries to a file in your LOG_DIR, as long as you
+# have force_debug_cursor set as described in settings.py.
+# Useful when debugging database-querying code.
 #LOG_DATABASE_QUERIES=True
 
 
