Revive Selenium tests.
- Add a test runner class just for Selenium, and make our test runners look for tests based on presence/absence of the 'selenium' tag.

- Ease setup for running selenium vs. non-selenium tests with more if-else cases in settings.py.

- Make new accommodations for getting SQLite to (basically) work on CoralNet: add a USE_DISTINCT_ON setting; and add the ability to forgo migrations during test-DB creation, instead creating necessary initial data with separate code.

- Selenium package has been updated and is now in local.txt, not base.txt.

- Update test code according to what's changed in Selenium, and what's changed in CoralNet's Browse.

- In the SELENIUM_BROWSERS setting, options is now cli_args.

--- a/.env.dist
+++ b/.env.dist
@@ -159,5 +159,11 @@ SECRET_KEY=
 #   Absolute path to the browser binary, such as firefox.exe for Firefox
 #   on Windows. If not specified, it looks on your PATH or your Windows
 #   registry.
-#   Only applies to Firefox.
-#SELENIUM_BROWSERS=[{"name": "Chrome", "webdriver": "C:/Webdrivers/chromedriver.exe", "options": ["--headless"]}, {"name": "Firefox", "webdriver": "C:/Webdrivers/geckodriver.exe", "browser_binary": "C:/FirefoxPortable/default/App/firefox64/firefox.exe", "options": ["-headless"]}]
+# cli_args
+#   Command line arguments used when starting the browser. Defaults to
+#   no arguments.
+#   The headless argument is particularly useful since it means
+#   an actual browser window doesn't show up during tests,
+#   so the tests run a little faster and stay in the background without
+#   interrupting anything else you're doing.
+#SELENIUM_BROWSERS=[{"name": "Firefox", "webdriver": "C:/Webdrivers/geckodriver.exe", "browser_binary": "C:/FirefoxPortable/default/App/firefox64/firefox.exe", "cli_args": ["-headless"]}, {"name": "Chrome", "webdriver": "C:/Webdrivers/chromedriver.exe", "cli_args": ["--headless"]}]
