Selenium tests: support MS Edge.
Mainly because I want a second Selenium-ready browser and don't currently have Chrome installed...

--- a/.env.dist
+++ b/.env.dist
@@ -150,7 +150,7 @@ SECRET_KEY=
 #
 # name
 #   (Required) Name of the browser. Not case sensitive.
-#   Supported: 'Firefox', 'Chrome'.
+#   Supported: 'Firefox', 'Chrome', 'Edge'.
 # webdriver
 #   Absolute path to the web driver program, such as geckodriver.exe for
 #   Firefox on Windows. If not specified, it searches your PATH for the
