Ensure production doesn't set an AWS access key through .env, and discourage development from doing it too.

--- a/.env.dist
+++ b/.env.dist
@@ -32,15 +32,6 @@ DATABASE_PASSWORD=password_goes_here
 
 
 #
-# AWS access
-#
-
-# Required for S3 media storage, and for various cases involving spacer.
-#AWS_ACCESS_KEY_ID=KEYGOESHERE
-#AWS_SECRET_ACCESS_KEY=SECRETACCESSKEY/GOESHERE
-
-
-#
 # Secret key
 #
 
@@ -167,3 +158,15 @@ SECRET_KEY=
 #   so the tests run a little faster and stay in the background without
 #   interrupting anything else you're doing.
 #SELENIUM_BROWSERS=[{"name": "Firefox", "webdriver": "C:/Webdrivers/geckodriver.exe", "browser_binary": "C:/FirefoxPortable/default/App/firefox64/firefox.exe", "cli_args": ["-headless"]}, {"name": "Chrome", "webdriver": "C:/Webdrivers/chromedriver.exe", "cli_args": ["--headless"]}]
+
+
+#
+# Other potentially useful settings
+#
+
+# AWS static credentials. Not a particularly secure way to connect to AWS, but
+# if you're in a development environment which is having trouble getting
+# IAM Roles Anywhere to work for whatever reason, then this would be the way
+# to get un-stuck.
+#AWS_ACCESS_KEY_ID=KEYGOESHERE
+#AWS_SECRET_ACCESS_KEY=SECRETACCESSKEY/GOESHERE
