Support AWS auth methods that use a profile name or a session token.
In particular, profile name is used for IAM Roles Anywhere, which seems to be a good practice for development environments.

--- a/.env.dist
+++ b/.env.dist
@@ -29,6 +29,7 @@ DATABASE_PASSWORD=password_goes_here
 #DATABASE_USER=django
 #DATABASE_PASSWORD=password_goes_here
 #AWS_STORAGE_BUCKET_NAME=bucket-goes-here
+#AWS_PROFILE_NAME=profile-goes-here
 
 
 #
@@ -170,3 +171,4 @@ SECRET_KEY=
 # to get un-stuck.
 #AWS_ACCESS_KEY_ID=KEYGOESHERE
 #AWS_SECRET_ACCESS_KEY=SECRETACCESSKEY/GOESHERE
+#AWS_SESSION_TOKEN=TOKENGOESHERE
